@@ -1,5 +1,8 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.553 2006/02/02 17:55:15 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.554 2006/02/03 22:39:47 rocket Exp $
+
+  03 Feb 2006; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
+  change all occurrences of ${clst_livecd_cdfstype} with ${clst_fstype}
 
   02 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   This is 2.0_rc30.
